[tool.poetry]
name = "uav-sensor-fusion"
version = "0.1.0"
description = ""
authors = ["Tsmorz <tonysmoragiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
argparse = "^1.4.0"
matplotlib = "^3.9.2"
ruff = "^0.6.9"
loguru = "^0.7.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
